# VideoTogether

./: .gitignore  .replit  CNAME  Dockerfile  LICENSE  README.MD  README_zh.MD  entrypoint.sh  pyproject.toml  redis.conf  replit.nix  replit.sh  requirements.txt  toc.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  docker-build.yml  release.yml
docs/: HttpApiSpec.md
docs/installation/: via.html  via_raw.html
docs/test/: inject_into_content.user.js  inject_into_page.user.js  inline-js.html  inline.html
docs/tools/: local.html
docs/website/: page1.html  page2.html  page3.html  page4.html  (+2 more)
release/: background.chrome.js  background.firefox.js  background.safari.js  cdn-config.json  extension.beta.user.js  extension.chrome.user.js  extension.debug.user.js  extension.firefox.user.js  extension.safari.user.js  extension.user.js  extension.website.user.js  extension.website_debug.user.js  guide.html  index.html  introduction.en-us.html  introduction.zh-cn.html  load.en-us.js  load.js  load.zh-cn.js  local_page.ja-jp.js  local_video_player.ja-jp.html  local_videos.ja-jp.html  v2.html  vt.debug.en-us.user.js  vt.debug.en-us.website.js  vt.debug.ja-jp.user.js  vt.debug.ja-jp.website.js  vt.debug.user.js  vt.debug.website.js  vt.debug.zh-cn.user.js  vt.debug.zh-cn.website.js  vt.en-us.user.js  vt.en-us.website.js  vt.frame.en-us.user.js  vt.frame.en-us.website.js  vt.frame.user.js  vt.frame.zh-cn.website.js  vt.ja-jp.user.js  vt.ja-jp.website.js  vt.user.js  (+4 more)
script/: build_extension.py  debug_build.py
utils/: find.js
(+162 files in other folders)
